CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(Tulip-plugin-layout-conversion CXX)

FIND_PACKAGE(TULIP3 REQUIRED)

INCLUDE_DIRECTORIES(${TULIP_INCLUDE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})


SET(PLUGIN_NAME "LayoutToDoubleVector-${TULIP_PLUGIN_VERSION}")

ADD_LIBRARY(${PLUGIN_NAME} SHARED LayoutToDoubleVector.cpp)
TARGET_LINK_LIBRARIES(${PLUGIN_NAME} ${TULIP_LIBRARY} ${TULIP_LIBRARY})
INSTALL(TARGETS ${PLUGIN_NAME} LIBRARY DESTINATION ${TULIP_PLUGINS_PATH})


SET(PLUGIN_NAME "DoubleVectorToLayout-${TULIP_PLUGIN_VERSION}")

ADD_LIBRARY(${PLUGIN_NAME} SHARED DoubleVectorToLayout.cpp)
TARGET_LINK_LIBRARIES(${PLUGIN_NAME} ${TULIP_LIBRARY} ${TULIP_LIBRARY})
INSTALL(TARGETS ${PLUGIN_NAME} LIBRARY DESTINATION ${TULIP_PLUGINS_PATH})

