CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(Tulip-plugin-layout-conversion CXX)

FIND_PACKAGE(Qt4 REQUIRED)
INCLUDE(${QT_USE_FILE})
FIND_PACKAGE(TULIP REQUIRED)

INCLUDE_DIRECTORIES(${TULIP_INCLUDE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR} ${QT_INCLUDES})


SET(PLUGIN_NAME "LayoutToDoubleVector-${TULIP_VERSION}")

ADD_LIBRARY(${PLUGIN_NAME} SHARED LayoutToDoubleVector.cpp)
TARGET_LINK_LIBRARIES(${PLUGIN_NAME} ${TULIP_LIBRARIES} ${QT_LIBRARIES})
INSTALL(TARGETS ${PLUGIN_NAME} LIBRARY DESTINATION ${TULIP_PLUGINS_DIR})


SET(PLUGIN_NAME "DoubleVectorToLayout-${TULIP_VERSION}")

ADD_LIBRARY(${PLUGIN_NAME} SHARED DoubleVectorToLayout.cpp)
TARGET_LINK_LIBRARIES(${PLUGIN_NAME} ${TULIP_LIBRARIES} ${QT_LIBRARIES})
INSTALL(TARGETS ${PLUGIN_NAME} LIBRARY DESTINATION ${TULIP_PLUGINS_DIR})
